# facedyn

./: .gitignore  DATA_FORMAT.md  PIPELINE.md  PROJECT_STRUCTURE.md  README.md  diagnose.py  pyproject.toml
src/facedyn/: __init__.py  _plot_utils.py  au_labels.py  face_maps.py  nmf.py  normalisation.py  representative_aus.py  smoothing.py  splitting.py
src/facedyn/features/: __init__.py  cmfts.py
tests/unit/: test_au_labels.py  test_cmfts.py  test_face_maps.py  test_nmf.py  test_normalisation.py  test_representative_aus.py  test_smoothing.py  test_splitting.py
tests/validation/: test_cmfts_validation.py  test_nmf_decomposer_validation.py  test_nmf_rank_cv_validation.py  test_nmf_reconstruction_validation.py  test_normalisation_validation.py  test_representative_au_selection_validation.py  test_smoothing_validation.py  test_splitting_validation.py
tests/validation/fixtures/: cmfts_input_subset.csv  cmfts_output_subset.csv  nmf_basis_d.csv  nmf_basis_w.csv  nmf_reconstruction_h_subset.csv  nmf_reconstruction_input_subset.csv  normalisation_train_params.csv  r_normalised_subset.csv  r_smoothed_20__exit_phone_room.csv  raw_20__exit_phone_room.csv  raw_smoothed_normalisation_subset.csv
